automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 body {
   background: pink;
+}
 
 h1 {
   color: blue;
-  font-size: 3em; 
+  font-size: 3em;
 }
 
 h2 {
@@ -18,5 +19,5 @@ h2 {
 
 #tasks .completed {
   background-color: #ccc;
-  text-decoration: underline;
+  text-decoration:underline;
 }
